
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/allmandatory"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/aclogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login"
            android:ems="10" >
	
            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/acmdp1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/passwd"
            android:ems="10" />

        <EditText
            android:id="@+id/acmdp2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/passwdconfirm"
            android:ems="10" />

        <EditText
            android:id="@+id/acemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

    </LinearLayout>
