<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/activity1"
    android:id="@+id/mainlayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/welcome"
            style="@style/Header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/welcome" />
    </LinearLayout>

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/mainscrollview"
        style="@style/activity1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/mainseparator"
        android:layout_below="@+id/header"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical" >

            <Button
                android:id="@+id/buttonMyObservation"
                style="@style/buttonstyle1"
                android:layout_height="wrap_content"
                android:text="@string/myobservation" />

            <Button
                android:id="@+id/buttonNewObservation"
                style="@style/buttonstyle1"
                android:layout_height="wrap_content"
                android:text="@string/newObservation" />

            <Button
                android:id="@+id/buttonHelpAuthentification"
                style="@style/buttonstyle1"
                android:layout_height="wrap_content"
                android:text="@string/authentificationText" />

            <Button
                android:id="@+id/buttonSync"
                style="@style/buttonstyle1"
                android:layout_height="wrap_content"
                android:text="@string/buttonToSync" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal" >

        <ToggleButton
            android:id="@+id/toggleButtonlogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nothing"
            android:textOff="@string/associateaccount"
            android:textOn="@string/logoff" />

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/homelogintext"
            android:textColor="@color/grey" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/mainseparator"
        style="@style/lineseparator"
        android:layout_above="@+id/footer"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:orientation="vertical" >
    </LinearLayout>

    <TextView
        android:id="@+id/konami"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/mainscrollview"
        android:text="@string/nothing" />

</RelativeLayout>