
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alertdialogsetlatlong" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/adllat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/alertdialoglat"
                android:inputType="numberDecimal|numberSigned" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/adllong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/alertdialoglong"
                android:inputType="numberDecimal|numberSigned" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alertdialogsetadress" />

        <EditText
            android:id="@+id/adladress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/alertdialogadresshint"
            android:ems="10" />

    </LinearLayout>
