<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lllistview"
    style="@style/activity1"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/lvtitleliste"
        style="@style/Header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/authentificationText" />

    <TextView
        android:id="@+id/listbreadcrumb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nothing"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/grey" />

    <LinearLayout
        android:id="@+id/separatorlist"
        style="@style/lineseparator"
        android:layout_marginBottom="5dp"
        android:orientation="vertical"
        android:visibility="gone" >
    </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <AutoCompleteTextView
                android:id="@+id/listviewsearchtextview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="gone"
                android:hint="@string/inputdialoghint"
            	style="@style/edittext1" />

            <Button
                android:id="@+id/listviewsearchbutton"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_weight="6"
                android:text="@string/ok"
                android:visibility="gone"
                style="@style/buttonstylesmall" />
        </LinearLayout>

    <ListView
        android:id="@+id/listviewperso"
        style="@style/listview1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

</LinearLayout>