<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/activity1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal" >

        <TextView
            style="@style/Headernogradiant"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/titleobservationsubmit" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/footer"
        android:layout_below="@+id/header"
        android:layout_centerHorizontal="true"
        android:orientation="vertical" >

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    style="@style/Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/infoobservationsubmit" />

                <TextView
                    android:id="@+id/ostvcampaign"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nothing"
                    style="@style/textpadding" />

                <TextView
                    android:id="@+id/ostvspecies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nothing"
                    style="@style/textpadding" />

                <TextView
                    android:id="@+id/ostvform"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nothing"
                    style="@style/textpadding" />
            </LinearLayout>

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/oscounter"
                    style="@style/Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ostitlefield"
                     />

                <LinearLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/oscounterlayout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <!-- Here comes the generated elements -->

                </LinearLayout>

                <LinearLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/osmap"
                        style="@style/buttonstyle1"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/geolocalisationbutton" />

                    <Button
                        android:id="@+id/osphoto"
                        style="@style/buttonstyle1"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/photobutton" />
                </LinearLayout>
                
                <TextView
                    android:id="@+id/oslocationtitle"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tvlocationtitle"
                    android:visibility="gone"
                    style="@style/Title" />
                <TextView
                    android:id="@+id/oslocationtext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nothing"
                    android:visibility="gone"
                    style="@style/textpadding"/>
                <TextView
                    android:id="@+id/osphototitle"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tvphototitle"
                    android:visibility="gone"
                    style="@style/Title" />
                <ImageView
                    android:id="@+id/osphotoviewer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/nothing"
                    android:scaleType="fitStart"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            style="@style/lineseparator"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp"
            android:orientation="vertical" >
        </LinearLayout>

        <Button
            android:id="@+id/ossubmit"
            style="@style/buttonstyle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/saveobservation" />
    </LinearLayout>

</RelativeLayout>