<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/listview"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/activity1" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/selectcampaign"
        style="@style/Header" />
    
    <LinearLayout
        android:id="@+id/lsoseparatorlist"
        android:visibility="gone"
        style="@style/lineseparator"
        android:layout_marginBottom="5dp"
        android:orientation="vertical" >
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <AutoCompleteTextView
            android:id="@+id/lsosearchtextview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="gone"
            android:hint="@string/inputdialoghint"
            style="@style/edittext1" />

        <Button
            android:id="@+id/lsosearchbutton"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="6"
            android:visibility="gone"
            android:text="@string/ok"
            style="@style/buttonstylesmall" />

    </LinearLayout>

    <ListView
        android:id="@+id/lsolv"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        style="@style/listview2"/>
        
      
 
</LinearLayout>